fetch event from database

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
-MONGO_URI=mongodb+srv://admin:admin@cluster0.5yya4lf.mongodb.net/Eventorial?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://admin:admin@cluster0.yvaxkam.mongodb.net/Eventorial?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=hello
+
